--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "shader-loader": "^1.3.1",
     "three": "^0.92.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
